# discordjs-opus

./: .gitignore  CMakeLists.txt  build.mjs  build.ts  dtsPlugin.ts  flake.nix  meson.build  package-lock.json  package.json
.github/workflows/: build.yml
lib/: index.mjs  index.ts
src/: node-opus.cc  node-opus.h
subprojects/: node-addon-api.wrap  node-api-headers.wrap  node.wrap  opus.wrap
subprojects/packagefiles/node-addon-api/: meson.build
subprojects/packagefiles/node-api-headers/: meson.build
tests/: test.mjs  tests.test.ts
typings/: index.d.ts
